--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,27 +13,57 @@
 
 * {
     margin: 0px;
-    padding-inline-start: 0px;
+    padding: 0px;
 }
 
 body {
+    margin: auto;
     font-family: 'pixeled', Arial, Helvetica, sans-serif;
     background-color: var(--cor01);
-    margin: auto;
+    max-width: 600px;
+
 }
 
-main {
-    border: solid 3px black;
-    border-radius: 10px;
-    width: 300px;
-    height: 300px;
+div#menu {
+    margin-top: 50%;
 }
 
-div {
+body div#menu div {
     background-color: white;
     color: black;
     text-align: center;
     border: solid 3px black;
     width: 200px;
     border-radius: 50px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+div#rules {
+    margin: auto;
+    background-color: white;
+    border: solid 3px black;
+    border-radius: 25px;
+    width: 450px;
+    height: 400px;
+}
+
+div#rules img {
+    display: block;
+    margin: auto;
+    margin-top: 25px;
+    width: 350px;
+    height: 350px;
+}
+
+div.back {
+    background-color: white;
+    border: solid 3px black;
+    border-radius: 50px;
+    margin: auto;
+    margin-top: 50px;
+    width: 100px;
+    text-align: center;
+    
+    
 }
